--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	"require": {
 		"php": ">=5.3.7",
 		"setasign/fpdf": "1.8.1",
-		"dompdf/dompdf": "^2.0"
+		"dompdf/dompdf": "^2.0",
+		"phpoffice/phpspreadsheet": "^1.24"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
